--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="col py-5">
                 <h1>Art Guide</h1>
                 <p>Learn how to draw in clear step by step process</p>
-                <div><a href="/privacy-policy.html">Privacy Policy</a></div>
-                <div><a href="/terms.html">Terms & Conditions</a></div>
+                <div><a href="privacy-policy.html">Privacy Policy</a></div>
+                <div><a href="terms.html">Terms & Conditions</a></div>
                 <div><a href="mailto:alam.kanak@gmail.com">Contact Us</a></div>
             </div>
         </div>
