--- a/index.html
+++ b/index.html
@@ -10,15 +10,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+
+    <style>
+        body {font-family: 'Montserrat', sans-serif;}
+    </style>
+
     <title>Art Guide</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col py-5">
-                <h1>Art Guide</h1>
-                <p>Learn how to draw in clear step by step process</p>
+            <div class="col py-5 text-center">
+
+                <div class="row justify-content-center">
+                    <div class="col-2 col-lg-1 mb-4">
+                        <img src="imgs/icon.png" alt="" class="w-100">
+                    </div>
+                </div>
+                
+                <h1 class="fw-bold">Art Guide</h1>
+                <p class="mt-4 mb-5">Learn how to draw in clear step by step process</p>
+
+                <div class="bg-success rounded-3 py-3 px-4 fw-bold d-inline-block text-white">
+                    COMING SOON
+                </div>
+
+                <div class="row justify-content-center my-5">
+                    <div class="col-6">
+                        <img src="imgs/screenshot.png" alt="" class="w-100">
+                    </div>
+                </div>
+
                 <div><a href="privacy-policy.html">Privacy Policy</a></div>
                 <div><a href="terms.html">Terms & Conditions</a></div>
                 <div><a href="mailto:alam.kanak@gmail.com">Contact Us</a></div>
