--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="container">
-        <div class="row my-5">
+        <div class="row my-5 align-items-center">
             <div class="col-12 col-md-6">
                 <img src="imgs/screenshot.png" alt="" class="w-100">
             </div>
